--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pc.karta4">
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,18 +9,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Client"></activity>
-        <activity android:name=".Server"></activity>
-        <activity android:name=".Timer"></activity>
-        <activity android:name=".Jurdge"></activity>
-        <activity android:name=".ClientServer"></activity>
+        <activity android:name=".Client"
+            android:screenOrientation="portrait"
+            ></activity>
+        <activity android:name=".Server"
+            android:screenOrientation="landscape"
+            >
+        </activity>
+        <activity android:name=".Timer"
+            android:screenOrientation="portrait"
+            ></activity>
+        <activity android:name=".Jurdge"
+            android:screenOrientation="landscape"
+            ></activity>
 
     </application>
 
